# gpt-researcher

beeai-agent/: Dockerfile  README.md  agent.yaml  build.sh  pyproject.toml
beeai-agent/gpt_researcher_beeai/: agent.py  configuration.py
beeai-agent/granite_researcher/: agent.py
gpt_researcher/: agent.py  prompts.py
gpt_researcher/actions/: report_generation.py
gpt_researcher/config/variables/: default.py
gpt_researcher/skills/: researcher.py  writer.py
