[project]
name = "granite-researcher"
version = "0.1.0"
description = ""
authors = [{ name = "IBM Corp." }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk==0.8.4",
    "langchain-ollama==0.2.3",
    "duckduckgo-search>=7.3.2,<8.0.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "openinference-instrumentation-openai>=0.1.22",
]

[project.scripts]
server = "granite_researcher.agent:run"
